--- a/thesis.tex
+++ b/thesis.tex
@@ -121,7 +121,7 @@ Jednotlivé body práce by se daly rozdělit na vícero dílčích podproblémů
 \section{Předzpracování zadaných adres}
 K předzpracování zadávaných adres lze využít frontový systém \textit{Kafka}(\ref{sec:kafka}).
 
-Systém by měl reagovat na dva typy vstupů. Prvním vstupem budou adresy s vysokou prevalencí (případem takové adresy může být třeba internetový obchod \url{www.amazon.com}), které budou systému periodicky dodávány z externích modulů. Jako vstupní data lze využít seznamy poskytované službou Alexa Top Sitex \cite{alexa}, jež obsahují nejnavštěvovanější stránky kategorizované podle obsahu, či obdobný seznam jiné služby mazývané Majestic Milion \cite{majestic}.
+Systém by měl reagovat na dva typy vstupů. Prvním vstupem budou adresy s vysokou prevalencí, tedy adresy, jež jsou velmi často navštěvované uživateli na internetu. Případem takové adresy může být třeba internetový obchod \url{www.amazon.com}. Tyto adresy budou systému periodicky dodávány z externích modulů. Jako vstupní data lze využít seznamy poskytované službou Alexa Top Sites \cite{alexa}, jež obsahují nejnavštěvovanější stránky kategorizované podle obsahu, či obdobný seznam jiné služby nazývané Majestic Milion \cite{majestic}.
 
 Kromě automatického zpracovávání výše zmíněných seznamů může být vstupem i ručně zadaná adresa či seznam adres v případě potřeby operátora systému dodat na cleanset soubory z webových stránek s menší prevalencí, či ve více obecném řešení, potřeby stáhnout zdrojové soubory cílených webových stránek pro odlišné účely.
 
@@ -151,55 +151,60 @@ Jednotlivé rozebírané metody získání čistých souborů z webových strán
 \end{itemize}
 
 \subsection{Emulace webového prohlížeče} \label{sec:parsing}
-Výhodou emluace webového prohlížeče oproti druhé metodě s využitím nástroje \textit{Fiddler} je v rychlost a jednoduchost z hlediska využitých nástrojů.  Pro práci s webovými stránkami v \textit{Pythonu} existuje více knihoven, avšak nejčastěji se používá knihovna \textit{Requests}. Její interface je daleko snazší na použití než u knihovny \textit{Urllib}, jejíž výhodou je pouze fakt, že je již obsažena v základní instalaci \textit{Pythonu} a není nutno ji doinstalovávat. 
+Výhodou emluace webového prohlížeče oproti druhé metodě s využitím nástroje \textit{Fiddler} je rychlost a jednoduchost z hlediska využitých nástrojů (absence nutnosti využívat programy třetích stran). Pro práci s webovými stránkami v \textit{Pythonu} existuje více knihoven, z nichž nejčastěji používaná je knihovna \textit{Requests}. Její základ je postaven na knihovně \textit{Urllib}, která je sice již obsažena v základní instalaci \textit{Pythonu} a není nutno ji doinstalovávat, avšak z hlediska použití vyžaduje velké množství obalovacího kódu (kód, který zaručuje spravný běh programu v nestandardních situacích), jež je už v knihovně  \textit{Requests} implementován.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=9cm]{pictures/scrapper.png}
 	\caption{Diagram zachytávání komunikace pomocí web scrapperu}
 	\label{fig:web_scrapper}
 \end{figure}
-Nevýhoda knihovny \textit{Requests} je v horší práci se stránkami s přesměrováváním pomocí javascriptu nebo obecně s načítáním obsahu pomocí javascriptu. Vytvořit komplexní web scrapper (tj. nástroj, který prochází obsah webových stránek), který by dokázal reagovat i na javascriptem řízený obsah, je netriviální úkol (Obr.\ref{fig:web_scrapper}). 
 
-K samotnému parsování již stažené webové stránky je možné využít knihovnu BeautifulSoup\cite{beautifulsoup}, která implementuje HTML a XML parsery v jazyku Python. Pomocí ní je snadné procházet HTML kód a iterovat přes tagy komponentů stránky. Bylo by tedy potřeba vyhledat všechny části, které obsahují spouštění javascriptového souboru nebo přesměrování na jinou adresu, tyto soubory, respektive adresy, uložit do fronty a následně provézt stejný proces pro všechny ještě nezpracované položky fronty s postupným ukládáním již zpracovaných souborů. 
+Obrázek \ref{fig:web_scrapper} znázorňuje cyklus získávání dat pomocí emulovaného prohlížeče. Knihovně \textit{Requests} je zadána požadovaná url adresa. Knihovna získá ze serveru zdrojový kód této stránky, který uloží a zároveň jej předá HTML parseru. Následným výstupem je seznam url adres, které jsou ve zdrojovém kódu původní stránky obsaženy. seznam těchto adres jsou nyní novým vstupem knihovny \textit{Requests}. Tento cyklus se opakuje, dokud není list s url adresami prázdný.
+
+Nevýhodou emulace webového prohlížeče pomocí knihovny \textit{Requests} je obtížná interakce se stránkami využívajícími javascript k postupnému načítání obsahu či k přesměrovávání na jinou adresu. Vytvořit komplexní web scrapper (tj. nástroj, který prochází obsah webových stránek), který by dokázal reagovat i na javascriptem řízený obsah, není triviální úkol.  Knihovna \textit{Requests} je v tomto ohledu nedostačující a toto řešení indikuje javascriptové přesměrování a postupné načítání obsahu neřešit.
+
+K samotnému parsování již stažené webové stránky je možné využít knihovnu BeautifulSoup\cite{beautifulsoup}, která implementuje HTML a XML parsery v jazyku Python. Pomocí ní je snadné procházet HTML kód a iterovat přes tagy komponentů stránky. Lze tak vyhledat všechny části, které obsahují odkazy na jiné url adresy, či spouštění javascriptového souboru. 
 
 Přesměrování lze ošetřit pomocí hlídání response kódů (kód, který vrací server při komunikaci s webovým prohlížečem). Při přesměrování jsou běžné kódy 301, respektive 302. Pokud tedy vrátí server kód pro přesměrování, je nutné ve zdrojovém kódu stránky najít adresu pro přesměrování, stáhnout její obsah a tento soubor přidat do fronty k zpracování.
 
-Velkou výhodou tohoto řešení je absence nutnosti používat virtuální stroj, protože samotné stahování zdrojového kódu stránek by probíhalo bez nustnosti stažené soubory spouštět, čímž by nehrozilo nebezpeční infikace pracovního počítače škodlivým obsahem (o této problematice více v sekci \ref{sec:zabezpeceni}). Výraznou nevýhodou je ovšem neschopnost získání obsahu webových stránek, který se načítá se zpožděním za pomoci javascriptu (tzv. lazy loading).
+Velkou výhodou tohoto řešení je absence nutnosti používat virtuální stroj, protože samotné stahování zdrojového kódu stránek probíhá bez nutnosti stažené soubory spouštět. Tímto řešením nehrozí nebezpeční infikace pracovního počítače škodlivým obsahem (o této problematice více v sekci \ref{sec:zabezpeceni}). Výraznou nevýhodou je ovšem neschopnost získání obsahu webových stránek, který se načítá se zpožděním za pomoci javascriptu (tzv. lazy loading).
 
 \subsection{Zachytávání komunikace Fiddlerem}
-Z tohoto důvodu by bylo snazší použít nástroj \textit{Selenium}(\ref{sec:selenium}), čímž už dojde k určitému zpomalení z nutnosti spouštění internetového prohlížeče, avšak odpadne nutnost implementace sledování redirectů a postupného načítání stránek pomocí javascriptu. Stále je ovšem potřeba načtené stránky nějak zpracovat, což by bylo možné pomocí \textit{Fiddleru}(\ref{sec:fiddler}). Tím sice opět vzniká další zpomalení kvůli spouštění dalšího programu, řešení ale přináší téměř kompletní implementaci rozebíraného problému s možnou variací úprav pomocí konfiguračního souboru.
+Jiným postupem je použít nástroj \textit{Selenium}(\ref{sec:selenium}) k ovládání webového prohlížeče s využitím \textit{Fiddleru}(\ref{sec:fiddler}) pro zachytávání komunikace. Nevýhodou této metody je zpomalení vzniklé spouštěním internetového prohlížeče a nástroje Fiddler. Naopak výhodou je již implementované řešení webového prohlížeče umožňujícího interagovat se stránkami využívajícími javascript. Nastroj Fiddler umožňuje zachytávat i šifrovanou komunikaci pomocí protokolu https. K tomu je potřeba vygenerovat bezpečnostní certifikát a přidat jej mezi důveryhodné certifikáty v internetovém prohlížeči.
+
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=7cm]{pictures/fiddler_diagram.png}
 	\caption{Diagram zachytávání komunikace Fiddlerem}
 	\label{fig:fiddler}
 \end{figure}
-Protože je \textit{Fiddler} původně vyvíjen pro testovací účely a sledování internetové komunikace (tzv. traffic), zachytává veškerý traffic, který skrze nástroj proudí (Obr.\ref{fig:fiddler}). Bylo by tedy potřeba implementovat logiku pro třídení a následnou selekci HTML a .js souborů.
+
+Obrázek \ref{fig:fiddler} znázorňuje cyklus zachytávání dat pomocí nástroje Fiddler. Internetovému prohlížeči je předána adresa pomocí nástroje Selenium. Prohlížeč následně komunikuje se serverem, který vrací všechny požadované zdrojové soubory potřebné k načtení požadované adresy. Tato komunikace je zachycena pomocí nástroje Fiddler. Nástroj \textit{Fiddler} je využíván k testovacím účelům a zachytává veškerou internetovou komunikaci (tzv. traffic), která skrze nástroj proudí. Využítí této metody tedy obnáší implementování třídení zachycené komunikace a selekce HTML a .js souborů.
 
 \subsubsection{Selekce HTML a .js souborů}
-Prvním přístupem je emulace webového prohlížeče. Přináší výhodu v tom, že se při parsování HTML stránek rovnou přistupuje pouze k .js a HTML souborům a tím odpadá nutnost následně nějakou selekci provádět. Metoda s použitím \textit{Fiddleru} je v tomto složitější. \textit{Fiddler} je komplexní nástroj a automaticky zachytává veškerou komunikaci - nejen soubory potřebné k vykrelení webové stránky, ale i režijní komunikaci mezi prohlížečem a serverem. Tento přístup je možné změnit pomocí již zmíněného inicializačního scriptu. 
+\textit{Fiddler} standardně zachytává veškerou komunikaci. Nástroj je však možné konfigurovat pomocí inicializačního scriptu, který je psaný v javascriptu. Pomocí tohoto skriptu je možné nastavit Fiddler tak, aby zachytával pouze soubory .html a .js. Tím lze odfiltrovat nepotřebné soubory, které se v zachycené komunikaci mohou objevit (css soubory, obrázky a jiné).
 
-Avšak problémy této metody přináší i webový prohlížeč, kterého se zde využívá. Téměř vždy při spuštění prohlížeče probíhá nevyžádaná komunikace prohlížeče se servery, která je potřeba vytřídit. I zde je možné využít inicializačního scriptu \textit{Fiddleru}, implementovat třídění již při zachytávání komunikace a zachytávat pouze HTML a .js soubory ze serverů, které odpovídají zpracovávané url. To ovšem přináší problémy s přesměrováním, které může seznam chtěných serverů libovolně navyšovat, což už by pro inicializační script představovalo nelehký úkol a takové řešení patrně nebude optimální. Druhý způsob je zachytávat HTML a .js komunikaci ze všech serverů a selekci řešit až později při zpracování dat v \textit{Pythonu}. Nedostatkem této možnosti je zvýšená náročnost na paměť, kterou představuje zpracovávání více souborů. Předpokládá se ale, že tato nevyžádaná komunikace bude v poměru s chtěnými soubory minimální, tudíž by k výrazné zvýšení náročnosti na paměť dojít nemělo.
+Dále je potřeba filtrovat režijní komunikaci mezi prohlížečem a servery, která vzniká při spouštění prohlížeče a načítání stránek. Tato komunikace je nevyžádaná a je potřeba ji vytřídit. I zde je možné využít inicializačního skriptu \textit{Fiddleru} a implementovat třídění již při zachytávání komunikace. Zachytávat tedy pouze soubory ze serverů, které odpovídají zpracovávané url. To ovšem přináší problémy s přesměrováním, které může seznam chtěných serverů navyšovat. Druhý způsob je zachytávat HTML a .js komunikaci ze všech serverů a selekci řešit až později při zpracování dat v \textit{Pythonu}. Nedostatkem této možnosti je zvýšená náročnost na paměť při zpracovávání více souborů. Avšak předpokladem je, že tato nevyžádaná komunikace bude v poměru s chtěnými soubory minimální, tudíž by k výraznému zvýšení paměťové náročnosti dojít nemělo.
 
 
 
 
 
 \section{Zabezpečení stahovacího procesu}\label{sec:zabezpeceni}
-Z bezpečnostních důvodů je kladen důraz na zabezpečení veškerého procesu stahování webového obsahu. Předpokládá se sice, že všechny stažené soubory budou nezavirované, avšak spoléhat se na to není bezpečné řešení. Jedním z možných způsobů jak docílit základní bezpečnosti je vytvoření a obsluha virtuálního stroje, na kterém by docházelo ke stahování souborů. 
+Z bezpečnostních důvodů je kladen důraz na zabezpečení veškerého procesu stahování webového obsahu. Při doplňování cleansetu se předpokládá neinfikovanost stažených souborů, avšak při obecnějším využití navrhovaného systému již nento předpoklad neplatí. Jedním z možných způsobů docílení bezpečnosti je vytvoření a obsluha virtuálního stroje. Tento virtuální stroj lze využít jako karanténní prostředek, který zaručí stahování souborů bez potenciální infikace fyzického systému (Obr.\ref{fig:virtualbox}).
 
-Celý koncept zabezpečení stahování pomocí virtuálního systému je ovlivněn použitím nástroje \textit{Fiddler}(\ref{sec:fiddler}) pro stahování souborů z webových stránek. Tato metoda by využívala \textit{Fiddler}, který by běžel na pozadí, spolu s prohlížečem, v kterém by byly stránky otevírány a pomocí \textit{Fiddleru} zachytávána komunikace (Obr.\ref{fig:virtualbox}). 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=9cm]{pictures/virtualbox.png}
 	\caption{Zaobalení stahovacího procesu virtuálním strojem}
 	\label{fig:virtualbox}
 \end{figure}
-Právě otevírání stránek v prohlížeči, během čehož dochází ke spouštění javascriptových souborů, je z pohledu bezpečnosti potenciálně nebezpečné. Toho by se dalo vyvarovat emulací prohlížeče přímo v \textit{Pythonu}, čímž by se stahovaly rovnou zdrojové kódy webových stránek bez nutnosti jejich spouštění. Tato metoda však přináší problémy, které již byly popsané v subsekci \ref{sec:parsing}.
 
-Pokud se jedná o nástroje umožňující virtualizaci systému, lze použít \textit{VMware workstation} od firmy VMware nebo \textit{Virtualbox} vyvíjený firmou Oracle. Firma VMware nabízí pro práci se svými virtuálními stroji infrastrukturu nazývající se \textit{vSphere}. Tato infrastruktura obsahuje vlastní SDK nástroje pro implementaci do programovacího jazyka \textit{Python}\cite{vmware}, avšak celé toto řešení se nenabízí s freeware licencí. Z tohoto důvodu by bylo lepší použít virtualizační nástroj \textit{Virtualbox}(\ref{sec:virtualbox}), který je zdarma. \textit{Virtualbox} od firmy Oracle také obsahuje vlastní SDK pro podporu \textit{Pythonu}, pro které je už napsaná knihovna \textit{pyvbox}\cite{pyvbox}. Tato knihova obaluje většinu metod, které SDK \textit{Virtualboxu} obsahuje. 
+Otevíráním webových stránek v prohlížeči dochází ke spouštění javascriptových souborů, což je potenciálně nebezpečné. Proto je zabezpečovací proces nutné řešit pouze u metody využívající nástroj Fiddler. Při emulaci prohlížeče v \textit{Pythonu} dochází rovnou ke stahování zdrojových kódů webových stránek bez nutnosti jejich spouštění.
 
-Z hlediska bezpečnosti by bylo rozumné spouštět virtuální stroj (neboli VM) pro každou webovou stránku zvlášť, to by ale celý proces výrazně zpomalovalo. Předpokládá se, že nejdelší dobu zabere právě startování VM.  Jiné řešení by nabízelo restartovat virtuální stroj vždy po určitém čase nebo po daném množství zpracovaných url adres. Tím by se běh systému výrazně zrychlil.
+Pro virtualizaci systému lze použít nástroj \textit{VMware workstation} od firmy VMware nebo \textit{Virtualbox} vyvíjený firmou Oracle. Firma VMware nabízí pro práci se svými virtuálními stroji infrastrukturu nazývající se \textit{vSphere}. Tato infrastruktura obsahuje vlastní SDK nástroje pro implementaci do programovacího jazyka \textit{Python}\cite{vmware}, avšak celé toto řešení se nenabízí s freeware licencí. Naopak virtualizační nástroj \textit{Virtualbox}(\ref{sec:virtualbox}) je zdarma, nabízí však méně propracované nástroje pro programovací jazyk Python. Pro práci s \textit{Virtualbox SDK} lze využít knihovnu \textit{pyvbox}\cite{pyvbox}. Tato knihova obaluje většinu metod, které SDK \textit{Virtualboxu} obsahuje. 
+
+Virtuální stroj (neboli VM) lze spouštět pro každou webovou stránku zvlášť, čímž je docíleno maximálního zabezpečení, avšak zvyšuje se tím čas potřebný ke zpracování jedné adresy. Startování VM je předpokládáno jako velmi časově náročné.  Virtuální stroj lze také restartovat vždy po určitém čase nebo po daném množství zpracovaných url adres. Tím lze docílit výrazného zrychlení běhu systému.
 
 
 
@@ -267,7 +272,7 @@ Zprávy zůstávají v topicu po určitou dobu, což určuje hodnota retence. Po
 Virtualbox je opensource virtualizační nástroj vyvíjen firmou Oracle. Slouží k instalaci  a obsluze virtuálních operačních systémů na jednom fyzickém stroji. Jeho výhodou je multiplatformnost, což znamená, že je možné ho nainstalovat na MS Windows i operační systémy s unixovým jádrem (Linux, Mac OS). Tímto lze docílit například spuštění linuxového systému pod operačním systémem Windows.\cite{virutalbox}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=5cm]{pictures/vbox.png}
+	\includegraphics[width=4cm]{pictures/vbox.png}
 	\caption{PC s virtuálními stroji \cite{vbox_pic}}
 	\label{fig:vbox}
 \end{figure}
