--- a/thesis.tex
+++ b/thesis.tex
@@ -1031,67 +1031,87 @@ Posledním bodem zadání bylo důsledné otestování navrženého systému. Te
 \begin{thebibliography}{9}
 
     \bibitem{avast_flier}
-    \textit{Avast corporate factsheet}, Dostupné z: \\       \url{https://cdn2.hubspot.net/hubfs/2706737/media-materials/corporate-factsheet/Avast_corporate_factsheet_A4_en.pdf} \\
+    Avast corporate factsheet. \textit{Avast Software} [online]. Copyright ©2019, Avast Software [cit. 14.04.2020]. Dostupné z: \\       \url{https://cdn2.hubspot.net/hubfs/2706737/media-materials/corporate-factsheet/Avast_corporate_factsheet_A4_en.pdf}
        	
-    \bibitem{jan}
-       	Moravec Jan. \textit{Distribuované řízení kolon vozidel na autodráze}. \textcopyright2014, České vysoké učení technické v Praze, vedoucí práce Ing. Ivo Herman, Dostupné z: \\    \url{https://dspace.cvut.cz/bitstream/handle/10467/24299/F3-BP-2014-Moravec-Jan-prace.pdf} \\
     
-    \bibitem{fiddler}
+    \bibitem{python}
+    
+    Welcome to Python.org. \textit{Welcome to Python.org} [online]. Copyright ©2001 [cit. 14.04.2020]. Dostupné z: \\ 
+     \url{https://www.python.org/}
+    
+    \bibitem{fiddler}   
+    
+    Fiddler - Free Web Debugging Proxy - Telerik. \textit{Telerik UI for ASP.NET AJAX, MVC, Core, Xamarin, Angular, HTML5 and jQuery} [online]. Copyright © 2020, Progress Software Corporation and [cit. 14.04.2020]. Dostupné z:  \\ 
     \url{https://www.telerik.com/fiddler}
     
     \bibitem{beautifulsoup}
-    \url{https://www.crummy.com/software/BeautifulSoup/} 	
+    Beautiful Soup: We called him Tortoise because he taught us.. \textit{Swear not by the wiki, the fickle wiki, the inconstant wiki} [online]. Copyright © 1996 [cit. 14.04.2020]. Dostupné z:     \\  \url{https://www.crummy.com/software/BeautifulSoup/} 	
 
     
     \bibitem{mitm}
+    What is MITM (Man in the Middle) Attack | Imperva. \textit{Cyber Security Leader | Imperva, Inc.} [online]. Copyright © 2020 Imperva. All rights reserved [cit. 14.04.2020]. Dostupné z:  \\ 
     \url{https://www.imperva.com/learn/application-security/man-in-the-middle-attack-mitm/}
 
 
 	\bibitem{kafka}
+	Overview of Kafka. In: \textit{Wikipedia: the free encyclopedia} [online]. San Francisco (CA): Wikimedia Foundation, 2001- [cit. 2020-04-14]. Dostupné z: \\ 
 	\url{https://en.wikipedia.org/wiki/Apache_Kafka#/media/File:Overview_of_Apache_Kafka.svg}
 	
 	\bibitem{virutalbox}
-	\url{https://www.virtualbox.org/manual/ch01.html}
+	Oracle VM VirtualBox. User Manual v6.1.4. \textit{Oracle Corporation} [online]. Copyright © 2020 Oracle Corporation [cit. 14.04.2020]. Dostupné z: \\ 
+	\url{http://download.virtualbox.org/virtualbox/UserManual.pdf}
 	
-	\bibitem{docker}
+	\bibitem{docker}	
+	What is a Container? | App Containerization | Docker. \textit{Empowering App Development for Developers | Docker} [online]. Copyright © 2020 Docker Inc. All rights reserved [cit. 14.04.2020]. Dostupné z: \\ 
 	\url{https://www.docker.com/resources/what-container}
 	
 	\bibitem{vbox_pic}
+	Virtualizace na desktopu. \textit{Michal Zobec: Virtuální PC Blog} [online]. Dostupné z: \\  
 	\url{https://www.virtualnipc.cz/wp-content/gallery/140701-1-uvod-do-virtualizace-na-desktopu/cache/140701-uvod-do-virtualizace-na-desktopu-img-1.png-nggid013-ngg0dyn-640x480x100-00f0w010c010r110f110r010t010.png}
 	
 	\bibitem{vmware}
-	\url{[https://code.vmware.com/web/sdk/6.7/vsphere-automation-python]}
+	vSphere Automation SDK for Python. \textit{VMware Inc.} [online]. Copyright ©2020 VMware, Inc. [cit. 14.04.2020]. Dostupné z:  \\ 
+	\url{https://code.vmware.com/web/sdk/6.7/vsphere-automation-python}
 	
 	\bibitem{pyvbox}
-	Dorman Michael. \textit{pyvbox Documentation}. \textcopyright2017 Dostupné z: \\
+	pyvbox Documentation. \textit{Dorman Michael} [online]. Copyright \textcopyright2017 Dostupné z: \\ 
 	\url{https://buildmedia.readthedocs.org/media/pdf/pyvbox/latest/pyvbox.pdf}
 	
 	\bibitem{gecko}
+	Releases · mozilla/geckodriver · GitHub. \textit{The world’s leading software development platform · GitHub} [online]. Copyright © 2020 GitHub, Inc. [cit. 14.04.2020]. Dostupné z:  \\ 
 	\url{https://github.com/mozilla/geckodriver/releases}
 	
 	\bibitem{firefox}
+	Firefox Browser. \textit{Mozilla} [online]. Copyright ©1998-2020 [cit. 14.04.2020]. Dostupné z:  \\ 
 	\url{https://www.mozilla.org/cs/firefox/new/}
 	
 	\bibitem{chrome}
+	Webový prohlížeč Google Chrome. \textit{Google} [online]. [cit. 14.04.2020]. Dostupné z:  \\ 
 	\url{https://www.google.com/intl/cs_CZ/chrome/}
 	
 	\bibitem{chromedriver}
+	ChromeDriver - WebDriver for Chrome. \textit{ChromeDriver - WebDriver for Chrome} [online]. [cit. 14.04.2020]. Dostupné z: \\ 
 	\url{https://chromedriver.chromium.org/}
 	
 	\bibitem{response_codes}
+	HTTP/1.1: Status Code Definitions. \textit{World Wide Web Consortium (W3C)} [online]. [cit. 14.04.2020]. Dostupné z: \\ 
 	\url{https://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html}
 	
 	\bibitem{confluent-kafka}
+	Kafka Python Client — Confluent Platform. \textit{Confluent} [online]. Copyright ©2020 [cit. 14.04.2020]. Dostupné z:  \\ 
 	\url{https://docs.confluent.io/current/clients/python.html}
 	
 	\bibitem{teamcity}
+	TeamCity: the Hassle-Free CI and CD Server by JetBrains. \textit{JetBrains: Developer Tools for Professionals and Teams} [online]. [cit. 14.04.2020]. Dostupné z: \\ 
 	\url{https://www.jetbrains.com/teamcity/}
 	
 	\bibitem{alexa}
+	Alexa - Top sites. \textit{Alexa - Keyword Research, Competitive Analysis and Website Ranking} [online]. Copyright © Alexa Internet, Inc. 1996 [cit. 14.04.2020]. Dostupné z:  \\ 
 	\url{https://www.alexa.com/topsites}
 	
 	\bibitem{majestic}
-	\url{TODO}
+	The Majestic Million. \textit{SEO Backlink Checker and Link Building Toolset | Majestic.com} [online]. [cit. 14.04.2020]. Dostupné z:  \\ 
+	\url{https://majestic.com/reports/majestic-million}
 	
 \end{thebibliography}
 
